apps/homebridge/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homebridge
  annotations:
    kopiur.home-operations.com/privileged-movers: "true"
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
