apps/homebridge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
  namespace: homebridge
  labels:
    app: homebridge
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: homebridge
          image: homebridge/homebridge:2025-07-21
          ports:
            - containerPort: 8581
              name: config-ui
              protocol: TCP
          volumeMounts:
            - name: homebridge-data
              mountPath: /homebridge
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8581
              host: localhost
            initialDelaySeconds: 180
            periodSeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8581
              host: localhost
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 10
      volumes:
        - name: homebridge-data
          persistentVolumeClaim:
            claimName: homebridge-storage
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/hostname: k8s-node2
