apps/homebridge/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homebridge
  namespace: homebridge
  labels:
    app: homebridge
spec:
  serviceName: homebridge
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: homebridge
          image: homebridge/homebridge:2026-09-25
          ports:
            - containerPort: 8581
              name: config-ui
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /homebridge
          resources:
            requests:
              cpu: 150m
              memory: 587Mi
            limits:
              memory: 800Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8581
              host: localhost
            initialDelaySeconds: 180
            periodSeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8581
              host: localhost
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 10
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/hostname: k8s-node2
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: linstor-r3
        resources:
          requests:
            storage: 10Gi
