apps/homebridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homebridge
  labels:
    app: homebridge
spec:
  type: ClusterIP
  selector:
    app: homebridge
  ports:
    - name: config-ui
      port: 8581
      targetPort: 8581
      protocol: TCP
    - name: alexa-proxy
      port: 9047
      targetPort: 9047
      protocol: TCP
