apps/homebridge/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebridge
  namespace: homebridge
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: homebridge
      sectionName: homebridge
  hostnames:
    - homebridge.i.recompiled.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /alexa
      backendRefs:
        - name: homebridge
          port: 9047
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homebridge
          port: 8581
