apps/homebridge/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homebridge
  namespace: homebridge
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homebridge.i.recompiled.org`) && PathPrefix(`/alexa`)
      kind: Rule
      services:
        - name: homebridge
          port: 9047
    - match: Host(`homebridge.i.recompiled.org`)
      kind: Rule
      services:
        - name: homebridge
          port: 8581
  tls:
    secretName: homebridge-tls
